--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,35 @@
 
 /* Your CSS Code here. */
+.holder0{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.item0{
+	width:100px;
+	height:100px;
+	background-color:blue;
+	display:flex;
+	margin:5px;
+	padding:5px;
+	justify-content:space-between;
+	flex-wrap:wrap;
+	
+	
+}
+.holder{
+	display: flex;
+	flex-wrap: wrap;
+	
+}
+.item{
+	width:100px;
+	height:100px;
+	background-color:blue;
+	display:flex;
+	margin:5px;
+	padding:5px;
+	flex-wrap:wrap;
+	
+	
+}
