--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,11 @@
 	padding:5px;
 	justify-content:space-between;
 	flex-wrap:wrap;
-	
-	
 }
 .holder{
 	display: flex;
 	flex-wrap: wrap;
-	
+	justify-content:space-between;
 }
 .item{
 	width:100px;
@@ -30,6 +28,5 @@
 	margin:5px;
 	padding:5px;
 	flex-wrap:wrap;
-	
-	
+	justify-content:space-between;
 }
